# alpaca

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/routes/: routes.py
app/models/: problem.py  state.py  thought.py
app/services/: generator_service.py  prompt_service.py  search_service.py  state_evaluator_service.py  tree_of_thoughts_facade.py
